--- a/cfg/cfgogl/tailred/shared_plugins.cfg
+++ b/cfg/cfgogl/tailred/shared_plugins.cfg
@@ -71,8 +71,8 @@ lgo_loadplugin double_getup.smx
 lgo_loadplugin fix_engine.smx
 lgo_loadplugin l4d2_stats.smx
 lgo_loadplugin l4d2_melee_shenanigans.smx
-lgo_loadplugin l4d2_fix_spawn_order.smx
 lgo_loadplugin l4d2_reload_fix.smx
+lgo_loadplugin l4d2_tank_horde_monitor.smx
 
 //--------------
 // Tailred
