--- a/cfg/cfgogl/tailred/shared_cvars.cfg
+++ b/cfg/cfgogl/tailred/shared_cvars.cfg
@@ -319,6 +319,9 @@ lgo_addcvar sm2_permament_health_proportion 0.75
 lgo_addcvar sm2_pills_hp_factor 6.0
 lgo_addcvar sm2_pills_max_bonus 30
 
+// [l4d2_tank_horde_monitor.smx]
+lgo_addcvar l4d2_tank_bypass_extra_flow 1500
+
 /////////////////////////////
 // [Static shotgun spread] //
 /////////////////////////////
