--- a/addons/sourcemod/data/l4d_info_editor_weapons.cfg
+++ b/addons/sourcemod/data/l4d_info_editor_weapons.cfg
@@ -4,6 +4,11 @@
 	// The "all" section must be above map specific sections. Any partial matching map names will overwrite duplicate data from the "all" section.
 	"all"
 	{
+		"weapon_shotgun_chrome"
+		{
+			"PelletScatterPitch"		"4.5"
+			"PelletScatterYaw"		"5.5"
+		}
 		"weapon_pumpshotgun"
 		{
 			"Damage"			"17"
@@ -15,19 +20,22 @@
 		{
 			"SpreadPerShot"			"0.26"
 			"MaxMovementSpread"		"2.45"
+			"Damage"				"23"
+			"RangeModifier"			"0.78"
 			"ReloadDuration"			"1.75"
 		}
 		"weapon_smg_silenced"
 		{
 			"SpreadPerShot"			"0.28"
 			"MaxMovementSpread"		"2.60"
-			"ReloadDuration"			"1.88"
+			"RangeModifier"			"0.81"
+			"ReloadDuration"			"1.92"
 		}
 		"weapon_sniper_scout"
 		{
-			"clip_size" "10"
-			"Damage" "125"
-			"tank_damage_multiplier" "1.2"
+			"clip_size"					"10"
+			"Damage"					"125"
+			"tank_damage_multiplier"	"1.2"
 		}
 		
 		// ====================================================================================================
