--- a/cfg/cfgogl/tailred/shared_cvars.cfg
+++ b/cfg/cfgogl/tailred/shared_cvars.cfg
@@ -83,7 +83,6 @@ lgo_addcvar z_respawn_interval 20
 lgo_addcvar z_charge_warmup 0
 lgo_addcvar z_jockey_min_mounted_speed 0.68
 lgo_addcvar charger_pz_claw_dmg 8
-lgo_addcvar z_max_hunter_pounce_stagger_duration 1
 
 // 肾上腺素
 lgo_addcvar adrenaline_duration 10
@@ -122,11 +121,14 @@ lgo_addcvar stripper_cfg_path cfg/cfgogl/tailred/stripper
 // Plugins //
 // ======= //
 
+// [charger_incap_damage]
+lgo_addcvar charger_dmg_incapped "30.0" // Default 15
+
 // [l4d2_sound_manipulation.smx]
 lgo_addcvar sound_flags 7
 
 // [l4d2_melee_damage_control.smx]
-lgo_addcvar l4d2_melee_damage_tank_nerf 20 // Percentage of melee damage nerf against tank (220 dmg)
+lgo_addcvar l4d2_melee_damage_tank_nerf 30 // Percentage of melee damage nerf against tank (210 dmg) - Default damage is 300.
 lgo_addcvar l4d2_melee_damage_charger 350.0
 
 // [saferoom_item_remove.smx]
@@ -169,9 +171,6 @@ lgo_addcvar l4d_no_bash_kills 1
 
 // [l4d_ci_ffblock.smx]
 lgo_addcvar common_hits 2
-
-// [double_getup.smx]
-lgo_addcvar longer_tank_punch_getup 1
 
 // [l4d_equalise_alarm_cars.smx]
 lgo_addcvar l4d_equalise_alarm_cars 1
@@ -237,6 +236,12 @@ lgo_addcvar gfc_common_zc_flags 9
 lgo_addcvar gfc_spit_zc_flags 6
 lgo_addcvar gfc_godframe_glows 1
 lgo_addcvar gfc_ff_min_time 0.8
+
+// [l4d2_m2_control.smx]
+lgo_addcvar z_max_hunter_pounce_stagger_duration 1
+lgo_addcvar l4d2_m2_hunter_penalty 0
+lgo_addcvar l4d2_m2_jockey_penalty 0
+lgo_addcvar l4d2_m2_smoker_penalty 0
 
 // [l4d2_uniform_spit.smx]
 lgo_addcvar l4d2_spit_dmg 2
