--- a/cfg/cfgogl/tailred/shared_plugins.cfg
+++ b/cfg/cfgogl/tailred/shared_plugins.cfg
@@ -63,16 +63,15 @@ lgo_loadplugin l4d2_tank_announce.smx
 lgo_loadplugin boomer_horde_equalizer.smx
 lgo_loadplugin l4d2_bw_rock_hit.smx
 lgo_loadplugin l4d2_tank_damage_cvars.smx
-lgo_loadplugin l4d2_getupfix.smx
 lgo_loadplugin l4d2_getup_slide_fix.smx
 lgo_loadplugin l4d2_hybrid_scoremod_zone.smx
 lgo_loadplugin l4d2_uncommon_blocker.smx
-lgo_loadplugin double_getup.smx
 lgo_loadplugin fix_engine.smx
 lgo_loadplugin l4d2_stats.smx
 lgo_loadplugin l4d2_melee_shenanigans.smx
 lgo_loadplugin l4d2_reload_fix.smx
 lgo_loadplugin l4d2_tank_horde_monitor.smx
+lgo_loadplugin charger_incap_damage.smx
 
 //--------------
 // Tailred
@@ -96,6 +95,7 @@ lgo_loadplugin l4d_info_editor.smx
 // Merged FF Plugins, needs to be loaded here
 //---------------------------------------------
 lgo_loadplugin l4d2_godframes_control_merge.smx
+lgo_loadplugin l4d2_getup_fixes.smx
 lgo_loadplugin l4d2_hittable_control.smx
 
 //---------------------------
