--- a/cfg/cfgogl/tailred3v3/confogl.cfg
+++ b/cfg/cfgogl/tailred3v3/confogl.cfg
@@ -68,6 +68,7 @@ l4d2_directoroptions_overwrite "DisallowThreatType=0;ProhibitBosses=0;TankLimit=
 lgo_addcvar z_tank_speed_vs 205
 lgo_addcvar z_tank_damage_slow_min_range 0
 lgo_addcvar z_tank_damage_slow_max_range 0
+lgo_addcvar l4d2_slowdown_crouch_speed_mod 1.2
 
 // [aitankgank.smx]
 lgo_addcvar tankgank_killoncrash 1
