--- a/cfg/cfgogl/tailredcoop/confogl.cfg
+++ b/cfg/cfgogl/tailredcoop/confogl.cfg
@@ -103,6 +103,7 @@ l4d2_directoroptions_overwrite "DisallowThreatType=0;ProhibitBosses=0;TankLimit=
 lgo_addcvar z_tank_speed_vs 260
 lgo_addcvar z_tank_damage_slow_min_range 0
 lgo_addcvar z_tank_damage_slow_max_range 0
+lgo_addcvar l4d2_slowdown_crouch_speed_mod 1.2
 
 // [l4d2_tongue_timer.smx]
 lgo_addcvar l4d2_tongue_delay_tank 8.0
