--- a/cfg/cfgogl/tailred1v1/confogl.cfg
+++ b/cfg/cfgogl/tailred1v1/confogl.cfg
@@ -61,6 +61,7 @@ l4d2_directoroptions_overwrite "DisallowThreatType=0;ProhibitBosses=0;TankLimit=
 lgo_addcvar z_tank_speed_vs 205
 lgo_addcvar z_tank_damage_slow_min_range 0
 lgo_addcvar z_tank_damage_slow_max_range 0
+lgo_addcvar l4d2_slowdown_crouch_speed_mod 1.2
 
 // [1v1_skeetstats.smx]
 lgo_addcvar sm_skeetstat_brevity 32
