--- a/cfg/generalfixes.cfg
+++ b/cfg/generalfixes.cfg
@@ -59,12 +59,12 @@ sm plugins load fixes/l4d2_hltv_crash_fix.smx
 sm plugins load fixes/l4d_checkpoint_rock_patch.smx
 sm plugins load fixes/l4d_backjump_fix.smx
 sm plugins load fixes/l4d_tongue_float_fix.smx
-sm plugins load fixes/spray_exploit_fixer.smx
 sm plugins load fixes/l4d2_ellis_hunter_bandaid_fix.smx
 sm plugins load fixes/l4d2_boomer_ladder_fix.smx
 sm plugins load fixes/l4d_tongue_bend_fix.smx
 sm plugins load fixes/l4d2_spit_cooldown_frozen_fix.smx
+sm plugins load fixes/l4d_fix_finale_breakable.smx
+sm plugins load fixes/l4d2_fix_firsthit.smx
 
 // Anti-Cheat.
 sm plugins load anticheat/l4d2_noghostcheat.smx
-sm plugins load anticheat/l4d2_user_commands.smx
